# drunccore

./: .gitignore  .ruff.toml  open-port.py  pyproject.toml  requirements.txt  setup.py  test.txt
.github/workflows/: lint.yml  run_mqst.yml  run_pytest.yml
config/tests/: nestedConfig.data.xml  one-controller-config.data.xml
docs/: Controller-interface.md  Controller.md  FAQ.md  FSM.md  Messaging-format.md  Process-manager-interface.md  Process-manager.md  README.md  Release-notes.md  Running-drunc.md  Unified-shell-reference.md  Unified-shell.md  Using-the-unified-shell.md
src/drunc/: exceptions.py  k8s_exceptions.py
src/drunc-core/apps/: __main_fake_daqapp_rest__.py  __main_session_manager__.py  __main_unified_shell__.py
src/drunc-core/authoriser/: dummy_authoriser.py  exceptions.py
src/drunc-core/broadcast/server/: broadcast_sender.py  broadcast_sender_implementation.py
src/drunc-core/connectivity_service/: exceptions.py
src/drunc-core/fsm/: configuration.py
src/drunc-core/fsm/actions/: some_test_action.py  trigger_rate_specifier.py
src/drunc-core/tests/: create_skeleton_test
src/drunc-core/tests/issues/: test_issue363.py
src/drunc-core/utils/: flask_manager.py  utils.py
src/drunc/apps/: __main_controller__.py  __main_controller_shell__.py  __main_fake_daqapp_rest__.py  __main_pm__.py  __main_pm_shell__.py  __main_session_manager__.py  __main_ssh_doctor__.py  __main_ssh_validator__.py  __main_unified_shell__.py
src/drunc/authoriser/: decorators.py
src/drunc/broadcast/: types.py  utils.py
src/drunc/broadcast/client/: broadcast_handler.py  broadcast_handler_implementation.py  configuration.py  grpc_stdout_broadcast_handler.py  kafka_stdout_broadcast_handler.py
src/drunc/broadcast/server/: configuration.py  decorators.py  grpc_servicer.py  kafka_sender.py
src/drunc/connectivity_service/: client.py
src/drunc/controller/: configuration.py  controller.py  controller_driver.py  decorators.py  exceptions.py  stateful_node.py  utils.py
src/drunc/controller/children_interface/: child_node.py  client_side_child.py  grpc_child.py  rest_api_child.py
src/drunc/controller/interface/: commands.py  context.py  controller.py  shell.py  shell_utils.py
src/drunc/data/process_manager/: k8s.json  process-manager-k8s-pocket.json  ssh-CERN-kafka-OpMon.json  ssh-CERN-kafka.json  ssh-pocket-kafka.json  ssh-standalone.json
src/drunc/fsm/: action_factory.py  core.py  exceptions.py  utils.py
src/drunc/fsm/actions/: db_run_registry.py  enable_dfo.py  file_logbook.py  file_run_registry.py  thread_pinning.py  user_provided_run_number.py  usvc_elisa_logbook.py  utils.py  (+1 more)
src/drunc/process_manager/: configuration.py  exceptions.py  k8s_process_manager.py  oks_parser.py  process_manager.py  process_manager_driver.py  ssh_process_manager.py  utils.py
src/drunc/session_manager/: configuration.py  exceptions.py  session_manager.py  session_manager_driver.py
src/drunc/tests/: conftest.py
src/drunc/unified_shell/: commands.py  context.py  shell.py
src/drunc/utils/: configuration.py  flask_manager.py  grpc_utils.py  shell_utils.py  utils.py
src/drunc_core/authoriser/: configuration.py  decorators.py  dummy_authoriser.py  exceptions.py
src/drunc_core/broadcast/: types.py  utils.py
src/drunc_core/connectivity_service/: client.py  exceptions.py
src/drunc_core/fsm/: action_loader.py  action_registry.py  configuration.py  core.py  exceptions.py  utils.py
src/drunc_core/utils/: configuration.py  flask_manager.py  grpc_utils.py  runtime.py  shell_utils.py  utils.py
src/drunccore/authoriser/: configuration.py  decorators.py  dummy_authoriser.py  exceptions.py
src/drunccore/broadcast/: types.py  utils.py
src/drunccore/connectivity_service/: client.py  exceptions.py
src/drunccore/fsm/: action_loader.py  action_registry.py  configuration.py  core.py  exceptions.py  transition.py  utils.py
src/drunccore/utils/: configuration.py  flask_manager.py  grpc_utils.py  runtime.py  shell_utils.py  utils.py
(+34 files in other folders)
