[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drunc"
requires-python = ">=3.10,<3.11"
dynamic = ["version", "readme"]
dependencies = [
    "click",
    "click-shell",
    "grpcio",
    "googleapis-common-protos",
    "grpcio-status",
    "grpcio-tools",
    "gunicorn",
    "kafka-python",
    "nest-asyncio",
    "rich",
    "requests",
    "Flask",
    "Flask-RESTful",
    "sh",
    "kubernetes",
    "pytz",
    "psutil",
]

[project.optional-dependencies]
dev = ["ruff", "pre-commit", "pytest",]

[project.scripts]
fake_daq_application = "drunc.apps.__main_fake_daqapp_rest__:main"
drunc-controller = "drunc.apps.__main_controller__:main"
drunc-controller-shell = "drunc.apps.__main_controller_shell__:main"
drunc-process-manager = "drunc.apps.__main_pm__:main"
drunc-process-manager-shell = "drunc.apps.__main_pm_shell__:main"
drunc-session-manager = "drunc.apps.__main_session_manager__:main"
drunc-unified-shell = "drunc.apps.__main_unified_shell__:main"
drunc-fsm-tests = "drunc.tests.__main_fsm__:main"
application-registry-service = "drunc.apps.__main_app_connectivity_server__:main"
drunc-ssh-validator = "drunc.apps.__main_ssh_validator__:main"

[tool.setuptools.dynamic]
version = {attr = "drunc.__version__"}
readme = {file = ["docs/README.md"]}

[tool.setuptools.package-data]
drunc = ["*.xml", "*.json"]