[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drunc"
requires-python = ">=3.10,<3.11"
dynamic = ["version", "readme"]
dependencies = [
    "click==8.1.7",
    "click-shell==2.1",
    "grpcio==1.68.0",
    "googleapis-common-protos==1.66.0",
    "grpcio-status==1.68.0",
    "grpcio-tools==1.68.0",
    "gunicorn==23.0.0",
    "kafka-python==2.0.2",
    "nest-asyncio==1.6.0",
    "rich==13.9.4",
    "requests==2.32.3",
    "Flask==3.1.0",
    "Flask-RESTful==0.3.10",
    "sh==2.1.0",
    "kubernetes==31.0.0",
    "pytz==2024.2",
    "psutil==6.1.0",
]

[project.optional-dependencies]
dev = ["ruff", "pre-commit", "pytest",]

[project.scripts]
fake_daq_application = "drunc.apps.__main_fake_daqapp_rest__:main"
drunc-controller = "drunc.apps.__main_controller__:main"
drunc-controller-shell = "drunc.apps.__main_controller_shell__:main"
drunc-process-manager = "drunc.apps.__main_pm__:main"
drunc-process-manager-shell = "drunc.apps.__main_pm_shell__:main"
drunc-session-manager = "drunc.apps.__main_session_manager__:main"
drunc-unified-shell = "drunc.apps.__main_unified_shell__:main"
drunc-fsm-tests = "drunc.tests.__main_fsm__:main"
application-registry-service = "drunc.apps.__main_app_connectivity_server__:main"
drunc-ssh-validator = "drunc.apps.__main_ssh_validator__:main"

[tool.setuptools.dynamic]
version = {attr = "drunc.__version__"}
readme = {file = ["docs/README.md"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"drunc.data.process_manager" = ["*.json"]