[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drunccore"
requires-python = ">=3.10,<3.11"
dynamic = ["version", "readme"]
dependencies = [
    "drunc-messages",
    "click==8.1.7",
    "click-shell==2.1",
    "grpcio==1.68.0",
    "googleapis-common-protos==1.66.0",
    "grpcio-status==1.68.0",
    "grpcio-tools==1.68.0",
    "gunicorn==23.0.0",
    "kafka-python==2.0.2",
    "nest-asyncio==1.6.0",
    "rich==13.9.4",
    "requests==2.32.3",
    "Flask==3.1.0",
    "Flask-RESTful==0.3.10",
    "sh==2.1.0",
    "kubernetes==31.0.0",
    "pytz==2024.2",
    "psutil==6.1.0",
]

[project.optional-dependencies]
dev = ["ruff", "pre-commit", "pytest",]

[tool.setuptools.dynamic]
version = {attr = "drunc_core.__version__"}
readme = {file = ["docs/README.md"]}

[tool.setuptools.packages.find]
where = ["src"]
